--- a/docs/Programming/Python/Python基础/词法分析.md
+++ b/docs/Programming/Python/Python基础/词法分析.md
@@ -1,4 +1,4 @@
-# 词法分析
+
 ## 行结构
 ### 显式拼接行
 两个及两个以上的物理行可用反斜杠（\）拼接为一个逻辑行，规则如下：以不在字符串或注释内的反斜杠结尾时，物理行将与下一行拼接成一个逻辑行，并删除反斜杠及其后的换行符。
@@ -16,3 +16,31 @@ if 1900 < year < 2100 and 1 <= month <= 12 \
                 'Juli',    'Augustus', 'September',  # for the months
                 'Oktober', 'November', 'December']   # of the year
 ```
+## 标识符和关键字
+与 Python 2.x 一样，在 ASCII 范围内（U+0001..U+007F），有效标识符字符为： 大小写字母 A 至 Z、下划线 _ 、数字 0 至 9，但不能以数字开头。
+
+Python 3.0 引入了 ASCII 之外的更多字符（请参阅 PEP 3131）。这些字符的分类使用 unicodedata 模块中的 Unicode 字符数据库版本。
+
+**标识符的长度没有限制，但区分大小写**。
+```python
+identifier   ::=  xid_start xid_continue*
+id_start     ::=  <all characters in general categories Lu, Ll, Lt, Lm, Lo, Nl, the underscore, and characters with the Other_ID_Start property>
+id_continue  ::=  <all characters in id_start, plus characters in the categories Mn, Mc, Nd, Pc and others with the Other_ID_Continue property>
+xid_start    ::=  <all characters in id_start whose NFKC normalization is in "id_start xid_continue*">
+xid_continue ::=  <all characters in id_continue whose NFKC normalization is in "id_continue*">
+```
+### 
+以下标识符为保留字，或称 关键字，不可用于普通标识符。
+```python
+False      await      else       import     pass
+None       break      except     in         raise
+True       class      finally    is         return
+and        continue   for        lambda     try
+as         def        from       nonlocal   while
+assert     del        global     not        with
+async      elif       if         or         yield
+```
+### 软关键字
+某些标识符仅在特定上下文中被保留。 它们被称为 软关键字。 match, case 和 _ 等标识符在模式匹配语句相关的上下文中具有相当于关键字的语义，但这种区分是在解析器层级完成，而不是在形符化的时候。
+作为软关键字，它们能够与模式匹配一起使用，同时仍然保持与使用 match, case 和 _ 作为标识符名称的现有代码的兼容性。
+### 保留的标识符类
