--- a/docs/Other/reading/七周七语言.md
+++ b/docs/Other/reading/七周七语言.md
@@ -1,3 +1,10 @@
+---
+hide:
+  tags
+tags:
+  - 编程范式
+  - 编程
+---
 ## 简介
 
 ## Ruby
@@ -5,9 +12,19 @@
 ## Io
 
 ## Prolog
+Prolog是一门声明式编程语言（decalarative language）。Prolog是一门逻辑编程语言，它于1972年由Alain Colmerauer和Phillipe Roussel开发完成，在自然语言处理领域颇受欢迎。和SQL一样，Prolog基
+于数据库，但是其数据由逻辑规则和关系组成；和SQL一样，Prolog包含两个部分：一部分用于描述数据，而另一部分则用于查询数据。在Prolog中，数据以逻辑规则的形式存在，下面是基本构建单元。
 
++ 事实。事实是关于真实世界的基本断言。（Babe是一头猪，猪喜欢泥巴。）
++ 规则。规则是关于真实世界中一些事实的推论。（如果一个动物是猪，那么它喜欢泥巴。）
++ 查询。查询是关于真实世界的一个问题。（Babe喜欢泥巴吗？）
+
+事实和规则被放入一个知识库（knowledge base）。Prolog编译器将这个知识库编译成一种适
+于高效查询的形式。
 ## Scala
+Scala是第四种。它是一种混合编程语言，混合编程语言在两种不同编程范型之间搭建一座桥梁以弥合差异。在这里，这座桥梁搭建在面向对象语言（如Java）以及函数式语言（如Haskell）之间。
 
+随着对计算机程序的需求越来越复杂，计算机语言也在发展演化。每隔20年左右，老的编程范型就会变得不足以应对一些组织和表达思想的新要求。新的范型必定会涌现出来，但这并不是一个简单的过程。每个新的编程范型都会引入一批编程语言，而不仅仅只是一种语言。最初的语言往往具有惊人的生命力，但也很不实用。比如面向对象编程语言Smalltalk或者函数式编程语言Lisp。
 ## Erlang
 
 ## Clojure
@@ -18,3 +35,9 @@
 ### 编程模型
 #### 面向对象
 如今，面向对象无疑是最强势的编程范型，而Java正是面向对象语言的典型代表。这种范型有三大主要思想：**封装、继承和多态**。
+
+### 并发
+面向对象编程会导致副作用和可变状态。若综合考虑这两个因素，程序就会变得异常复杂。当多个线程和进程共同使用时，复杂性会高到难以控制。函数式编程语言增加了一条重要规则，也因此增加了结构。多次触发同一函数将产生相同结果。变量是单赋值的。消除了副作用，竞争条件和一切与副作用相关的复杂性也就随之消除。
+#### Io、Erlang 和 Scala 中的 actor
+无论用对象还是进程，actor方法都始终如一。它获取从对象内部发出的非结构化的进程间通信，将其转化为头等结构之间的消息传递，且每个actor都拥有一个消息队列。
+### 编程结构
