--- a/docs/Tutorial/GUI/Qt/Qt5.9C++开发指南/多媒体.md
+++ b/docs/Tutorial/GUI/Qt/Qt5.9C++开发指南/多媒体.md
@@ -9,3 +9,15 @@ Qt多媒体模块提供了很多类，可以实现如下的一些功能：
 QMediaPlayer可以播放经过压缩的音频或视频文件，如mp3、mp4、wmv等文件，QMediaPlayer可以播放单个文件，也可以和QMediaPlaylist类结合，对一个播放列表进行播放。
 
 ![](https://cdn.staticaly.com/gh/abottleofmilk/CDN@master/img/20221204214628.png)
+
+枚举类型QMediaPlayer::State有3种取值，表示播放器的状态：
++ QMediaPlayer::StoppedState，停止状态；
++ QMediaPlayer::PlayingState，正在播放；
++ QMediaPlayer::PausedState，暂停播放状态。
+
+### 音频输入
+音频输入可以使用QAudioRecorder或QAudioInput两个类实现。QAudioRecorder是高层次的实现，输入的音频数据直接保存为文件，也可以通过QAudioProbe访问原始的音频数据。QAudioInput是低层次的实现，直接控制音频输入设备的参数，并将音频录制数据写入一个流设备。
+
+### 视频播放
+
+### 摄像头的使用
