--- a/docs/Tutorial/GUI/Qt/Qt5.9C++开发指南/应用程序设计辅助功能.md
+++ b/docs/Tutorial/GUI/Qt/Qt5.9C++开发指南/应用程序设计辅助功能.md
@@ -11,7 +11,7 @@
 
 （5）在应用程序中用QTranslator调用不同的“.qm”文件，实现不同的语言界面。
 ### tr()函数的使用
-
+为了让Qt能自动提取程序中用户可见的字符串，对于每个字符串都需要使用tr()函数封装。tr()是QObject的一个静态函数，在使用了Q_OBJECT宏定义的类或QObject的子类中，都可以直接使用tr()函数，否则需要使用QObject::tr()进行调用。或者在类定义中用Q_DECLARE_TR_FUNCTIONS宏把tr()函数添加到类中之后，再直接调用tr()函数。
 ## Qt样式表
 Qt样式表（style sheet）是用于定制用户界面的强有力的机制，其概念、术语是受到HTML中的级联样式表（Cascading Style Sheets，CSS）启发而来的，只是Qt 样式表是应用于窗体界面的。与HTML的CSS类似，Qt的样式表是纯文本的格式定义，在应用程序运行时可以载入和解析这些样式定义。使用样式表可以定义各种界面组件（QWidget类及其子类）的样式，从而使应用程序的界面呈现不同的效果。很多软件具有换肤功能，使用Qt的样式表就可以容易地实现这样的功能。
 ```CSS
