--- a/docs/Tutorial/GUI/Qt/Qt5.9C++开发指南/文件.md
+++ b/docs/Tutorial/GUI/Qt/Qt5.9C++开发指南/文件.md
@@ -1,4 +1,10 @@
-## 文件目录操作
+
+
+## 文本文件读写
+Qt提供了两种读写纯文本文件的基本方法，一种是用QFile类的IODevice读写功能直接进行读写，另一种是利用QFile和QTextStream结合起来，用流（Stream）的方法进行文件读写。
+## 二进制文件读写
+
+## 文件目录操作相关的类
 
 QCoreApplication：用于提取应用程序路径、程序名等文件信息。
 QFile：除了打开文件操作外，QFile还有复制文件、删除文件等功能。
