--- a/docs/Programming/Python/Python 教程/类.md
+++ b/docs/Programming/Python/Python 教程/类.md
@@ -29,6 +29,8 @@ def make_counter_test():
 make_counter_test()
 ```
 ## 初探类
+### Class对象
+`__doc__ `也是一个有效的属性，将返回所属类的文档字符串: "A simple example class"。
 如果同样的属性名称同时出现在实例和类中，则属性查找会优先选择实例:
 ```python
 >>> class Warehouse:
