--- a/docs/Tutorial/python/Matplotlib/说明/事件处理和选择.md
+++ b/docs/Tutorial/python/Matplotlib/说明/事件处理和选择.md
@@ -15,6 +15,7 @@ cid = fig.canvas.mpl_connect('button_press_event', onclick) # 返回连接id
 fig.canvas.mpl_disconnect(cid)  #断开连接
 ```
 
+
 当连接到 'key_press_event' 和 'key_release_event' 事件时，您可能会遇到 Matplotlib 使用的不同用户界面工具包之间的不一致。这是由于用户界面工具包的不一致/限制造成的。
 
 | Event name             | Class                                                        | Description                                               |
@@ -37,3 +38,45 @@ fig.canvas.mpl_disconnect(cid)  #断开连接
 ### 事件属性
 
 所有 Matplotlib 事件都继承自 [`matplotlib.backend_bases.Event`](https://matplotlib.org/stable/api/backend_bases_api.html#matplotlib.backend_bases.Event)存储属性的基类。作为事件处理的基础的最常见事件是按键/释放事件以及鼠标按下/释放和移动事件。处理这些事件的[`KeyEvent`](https://matplotlib.org/stable/api/backend_bases_api.html#matplotlib.backend_bases.KeyEvent)和[`MouseEvent`](https://matplotlib.org/stable/api/backend_bases_api.html#matplotlib.backend_bases.MouseEvent)类都派生自 LocationEvent。[`MouseEvent`](https://matplotlib.org/stable/api/backend_bases_api.html#matplotlib.backend_bases.MouseEvent)我们刚刚使用的 是，因此我们可以通过和[`LocationEvent`](https://matplotlib.org/stable/api/backend_bases_api.html#matplotlib.backend_bases.LocationEvent)访问数据和像素坐标。除了属性，它还有`(event.x, event.y)``(event.xdata, event.ydata)``LocationEvent`。
+
+### 对象拾取
+picker您可以通过设置一个Artist（例如Line2D, Text, Patch, Polygon,AxesImage等）的属性来启用拾取。（对象拾取）就是是否被鼠标击中。pickradius(描述距离的大小)。
+```python
+"""
+Compute the mean and stddev of 100 data sets and plot mean vs. stddev.
+When you click on one of the (mean, stddev) points, plot the raw dataset
+that generated that point.
+"""
+
+import numpy as np
+import matplotlib.pyplot as plt
+
+X = np.random.rand(100, 1000)
+xs = np.mean(X, axis=1)
+ys = np.std(X, axis=1)
+
+fig, ax = plt.subplots()
+ax.set_title('click on point to plot time series')
+line, = ax.plot(xs, ys, 'o', picker=True, pickradius=5)  # 5 points tolerance
+
+
+def onpick(event):
+    if event.artist != line:
+        return
+    n = len(event.ind)
+    if not n:
+        return
+    fig, axs = plt.subplots(n, squeeze=False)
+    for dataind, ax in zip(event.ind, axs.flat):
+        ax.plot(X[dataind])
+        ax.text(0.05, 0.9,
+                f"$\\mu$={xs[dataind]:1.3f}\n$\\sigma$={ys[dataind]:1.3f}",
+                transform=ax.transAxes, verticalalignment='top')
+        ax.set_ylim(-0.5, 1.5)
+    fig.show()
+    return True
+
+
+fig.canvas.mpl_connect('pick_event', onpick)
+plt.show()
+```
