--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/人脸识别.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/人脸识别.md
@@ -1,2 +1,67 @@
 人脸识别是指程序对输入的人脸图像进行判断，并识别出其对应的人的过程。人脸识别程序像我们人类一样，“看到”一张人脸后就能够分辨出这个人是家人、朋友还是明星。当然，要实现人脸识别，首先要判断当前图像内是否出现了人脸，也即人脸检测。只有检测到图像中出现了人脸，才能根据人脸判断这个人到底是谁。
 ## 人脸检测
+### 基本原理
+OpenCV提供了三种不同的训练好的级联分类器
+#### Haar级联分类器
+OpenCV提供了已经训练好的Haar级联分类器用于人脸定位。Haar级联分类器的实现，经过了以下漫长的历史：
++ 首先，有学者提出了使用Haar特征用于人脸检测，但是此时Haar特征的运算量超级大，这个方案并不实用
++ 接下来，有学者提出了简化Haar特征的方法，让使用Haar特征检测人脸的运算变得简单易行，同时提出了使用级联分类器提高分类效率
++ 后来，又有学者提出用于改进Haar的类Haar方案，为人脸定义了更多特征，进一步提高了人脸检测的效率。
+
+OpenCV自带的级联分类器存储在OpenCV根文件夹的data文件夹下。该文件夹包含三个子文件夹：haarcascades、hogcascades、lbpcascades，里面分别存储的是Harr级联分类器、HOG级联分类器、LBP级联分类器。其中，Harr级联分类器多达20多种（随着版本更新还会继续增加），提供了对多种对象的检测功能。
+
+![](https://cdn.staticaly.com/gh/abottleofmilk/CDN@master/img/20221210083157.png)
+
+```python
+# 加载级联分类器的语法格式为：
+<CascadeClassifier object> = cv2.CascadeClassifier( filename ) # filename是分类器的路径和名称。 # 直接在网络上找到相应XML文件，下载并使用。
+
+objects = cv2.CascadeClassifier.detectMultiScale( image[, scaleFactor[,
+minNeighbors[, flags[, minSize[, maxSize]]]]] )
+```
++ image：待检测图像，通常为灰度图像。
++ scaleFactor：表示在前后两次相继的扫描中，搜索窗口的缩放比例。
++ minNeighbors：表示构成检测目标的相邻矩形的最小个数。默认情况下，该值为3，意味着有3个以上的检测标记存在时，才认为人脸存在。如果希望提高检测的准确率，可以将该值设置得更大，但同时可能会让一些人脸无法被检测到。
++ flags：该参数通常被省略。在使用低版本OpenCV（OpenCV 1.X版本）时，它可能会被设置为CV_HAAR_DO_CANNY_PRUNING，表示使用Canny边缘检测器来拒绝一些区域。
++ minSize：目标的最小尺寸，小于这个尺寸的目标将被忽略。
++ maxSize：目标的最大尺寸，大于这个尺寸的目标将被忽略。
++ objects：返回值，目标对象的矩形框向量组。
+```python
+import cv2
+# 读取待检测的图像
+image = cv2.imread('img.png')
+# 获取XML文件，加载人脸检测器
+faceCascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')
+# 色彩转换，转换为灰度图像
+gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)
+# 调用函数detectMultiScale
+faceCascade.detectMultiScale
+faces = faceCascade.detectMultiScale(
+    gray,
+    scaleFactor = 1.15,
+    minNeighbors = 5,
+    minSize = (5,5)
+)
+print(faces)
+# 打印输出的测试结果
+print("发现{0}个人脸！".format(len(faces)))
+# 逐个标注人脸
+for(x, y, w, h) in faces:
+    # cv2.rectangle(image, (x, y), (x+w, y+w), (0,255,0),2) #矩形标注
+    cv2.circle(image, (int((x+x+w)/2), int((y+y+h)/2)), int(w/2), (0,255,0),2)
+# 显示结果
+cv2.imshow("dect", image)
+# 保存检测结果
+cv2.imwrite("re.jpg", image)
+cv2.waitKey(0)
+cv2.destroyAllWindows()
+```
+## LBPH人脸识别
+人脸识别的第一步，就是要找到一个模型可以用简洁又具有差异性的方式准确反映出每个人脸的特征。识别人脸时，先将当前人脸采用与前述同样的方式提取特征，再从已有特征集中找出当前特征的最邻近样本，从而得到当前人脸的标签。OpenCV提供了三种人脸识别方法，分别是LBPH方法、EigenFishfaces方法、Fisherfaces方法。
+
+## 人脸识别数据库
+### CAS-PEAL
+CAS-PEAL（Chinese Academy of Sciences - Pose, Expression, Accessory, and Lighting）是中科院计算技术研究所在2003年完成的包含1040位志愿者（其中有595位男性和445位女性）的共99594幅人脸图像的数据库。数据集的所有图像都是在专门的采集环境中采集的，涵盖了姿态、表情、饰物和光照4种主要变化条件，部分人脸图像具有背景、距离和时间跨度的变化。对每个人，在水平半圆形架子上设置了9部相机同时捕获其不同姿态的图像，还用了上下两个镜头（也即共18幅图像）。此外，这个数据库还考虑了5种表情、6种附件（3副眼镜、3顶帽子）和15个照明方向。目前，该数据库面向研究开放了其子集“CAS-PEAL-R1”，子集内包含1040人的30900幅图像。
+### AT&T Facedatabase
+### 人脸数据库整理网站
+http://face-rec.org/databases/
