--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/几何变换.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/几何变换.md
@@ -43,16 +43,20 @@ cv2.destroyAllWindows()
 ## 仿射
 仿射变换是指图像可以通过一系列的几何变换来实现平移、旋转等多种操作。该变换能够保持图像的平直性和平行性。**平直性是指图像经过仿射变换后，直线仍然是直线；平行性是指图像在完成仿射变换后，平行线仍然是平行线**。
 
+
+
+### 平移
+
 OpenCV中的仿射函数为cv2.warpAffine()，其通过一个变换矩阵（映射矩阵）M实现变换，具体为：
 
 $$ dst（x, y）=src（M11x+M12y+M13, M21x+M22y+M23 ）$$
+
 ![](https://s2.loli.net/2022/12/12/8uQsytTrNwiJIGc.png)
 
 ```python
 dst = cv2.warpAffine( src, M, dsize[, flags[, borderMode[, borderValue]]] )
-dst = cv2.warpAffine( src , M , dsize )
+dst = cv2.warpAffine( src , M , dsize ) # 一般用这个
 ```
-
 + dst代表仿射后的输出图像，该图像的类型和原始图像的类型相同。dsize决定输出图像的实际大小。
 + src代表要仿射的原始图像。
 + M代表一个2×3的变换矩阵。使用不同的变换矩阵，就可以实现不同的仿射变换。
@@ -60,7 +64,23 @@ dst = cv2.warpAffine( src , M , dsize )
 + flags代表插值方法，默认为INTER_LINEAR。当该值为WARP_INVERSE_MAP时，意味着M是逆变换类型，实现从目标图像dst到原始图像src的逆变换。具体可选值参见表5-1。
 + borderMode代表边类型，默认为BORDER_CONSTANT。当该值为BORDER_TRANSPARENT时，意味着目标图像内的值不做改变，这些值对应原始图像内的异常值。
 + borderValue代表边界值，默认是0。
-### 平移
+
+> 利用自定义转换矩阵完成图像平移
+
+```python
+import cv2
+import numpy as np
+img=cv2.imread("lena.bmp")
+height, width=img.shape[:2]
+x=100
+y=200
+M = np.float32([[1, 0, x], [0, 1, y]])
+move=cv2.warpAffine(img, M, (width, height))
+cv2.imshow("original", img)
+cv2.imshow("move", move)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
 ### 旋转
 ```python
 retval=cv2.getRotationMatrix2D(center, angle, scale)
@@ -69,10 +89,112 @@ retval=cv2.getRotationMatrix2D(center, angle, scale)
 + center为旋转的中心点。
 + angle为旋转角度，正数表示逆时针旋转，负数表示顺时针旋转。
 + scale为变换尺度（缩放大小）。
+
+> 完成图像旋转
+
+```python
+import cv2
+img=cv2.imread("lena.bmp")
+height, width=img.shape[:2]
+M=cv2.getRotationMatrix2D((width/2, height/2),45,0.6)
+rotate=cv2.warpAffine(img, M, (width, height))
+cv2.imshow("original", img)
+cv2.imshow("rotation", rotate)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
 ### 更复杂的仿射变换
 对于更复杂仿射变换，OpenCV提供了函数cv2.getAffineTransform()来生成仿射函数cv2.warpAffine()所使用的转换矩阵M。
+
 ```python
 retval=cv2.getAffineTransform(src, dst)
 ```
+
+
++ src代表输入图像的三个点坐标。
++ dst代表输出图像的三个点坐标。
+
+src和dst中的三个点分别对应平行四边形的左上角、右上角、左下角三个点。函数cv2.warpAffine()以函数cv2.getAffineTransform()获取的转换矩阵M为参数，将src中的点仿射到dst中。函数cv2.getAffineTransform()对所指定的点完成映射后，将所有其他点的映射关系按照指定点的关系计算确定。
+
+> 完成图像仿射
+
+```python
+import cv2
+import numpy as np
+img=cv2.imread('lena.bmp')
+rows, cols, ch=img.shape
+p1=np.float32([[0,0], [cols-1,0], [0, rows-1]])
+p2=np.float32([[0, rows*0.33], [cols*0.85, rows*0.25], [cols*0.15, rows*0.7]])
+M=cv2.getAffineTransform(p1, p2)
+dst=cv2.warpAffine(img, M, (cols, rows))
+cv2.imshow("origianl", img)
+cv2.imshow("result", dst)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
 ## 透视
+仿射变换可以将矩形映射为任意平行四边形，**透视变换则可以将矩形映射为任意四边形**。
+
+```python
+dst = cv2.warpPerspective( src, M, dsize[, flags[, borderMode[, borderValue]]] )
+retval = cv2.getPerspectiveTransform( src, dst ) # 四个点坐标
+```
+
+
++ dst代表透视处理后的输出图像，该图像和原始图像具有相同的类型。dsize决定输出图像的实际大小。
++ src代表要透视的图像。
++ M代表一个3×3的变换矩阵。
++ dsize代表输出图像的尺寸大小。
++ flags代表插值方法，默认为INTER_LINEAR。当该值为WARP_INVERSE_MAP时，意味着M是逆变换类型，能实现从目标图像dst到原始图像src的逆变换。具体可选值参见表5-1。
++ borderMode代表边类型，默认为BORDER_CONSTANT。当该值为BORDER_TRANSPARENT时，意味着目标图像内的值不做改变，这些值对应原始图像内的异常值。
++ borderValue代表边界值，默认是0。
+
+```python
+import cv2
+import numpy as np
+img=cv2.imread('demo.bmp')
+rows, cols=img.shape[:2]
+print(rows, cols)
+pts1 = np.float32([[150,50], [400,50], [60,450], [310,450]])
+pts2 = np.float32([[50,50], [rows-50,50], [50, cols-50], [rows-50, cols-50]])
+M=cv2.getPerspectiveTransform(pts1, pts2)
+dst=cv2.warpPerspective(img, M, (cols, rows))
+cv2.imshow("img", img)
+cv2.imshow("dst", dst)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
 ## 重映射
+把一幅图像内的像素点放置到另外一幅图像内的指定位置，这个过程称为重映射。
+
+```python
+dst = cv2.remap( src, map1, map2, interpolation[, borderMode[, borderValue]] )
+```
+
++ dst代表目标图像，它和src具有相同的大小和类型。
++ src代表原始图像。
++ map1参数有两种可能的值：
++ 表示(x, y)点的一个映射。
++ 表示CV_16SC2 , CV_32FC1, CV_32FC2类型(x, y)点的x值。
++ map2参数同样有两种可能的值：
++ 当map1表示(x, y)时，该值为空。
++ 当map1表示(x, y)点的x值时，该值是CV_16UC1, CV_32FC1类型(x, y)点的y值。
++ Interpolation代表插值方式，这里不支持INTER_AREA方法。具体值参见表5-1。
++ borderMode代表边界模式。当该值为BORDER_TRANSPARENT时，表示目标图像内的对应源图像内奇异点（outliers）的像素不会被修改。
++ borderValue代表边界值，该值默认为0。
+### 映射函数的理解
+重映射通过修改像素点的位置得到一幅新图像。在构建新图像时，需要确定新图像中每个像素点在原始图像中的位置。因此，映射函数的作用是查找新图像像素在原始图像内的位置。该过程是将新图像像素映射到原始图像的过程，因此被称为反向映射。在函数cv2.remap()中，参数map1和参数map2用来说明反向映射，map1针对的是坐标x, map2针对的是坐标y。
+
+通常情况下，我们将map1写为mapx，并且将map2写成mapy，以方便理解。
+### 复制
+
+### 绕x轴翻转
+
+### 绕y轴翻转
+
+### 绕x轴、y轴翻转
+
+### x轴、y轴互换
+
+### 图像缩放
