--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像运算.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像运算.md
@@ -1,2 +1,6 @@
 针对图像的加法运算、位运算都是比较基础的运算。但是，很多复杂的图像处理功能正是借助这些基础的运算来完成的。所以，牢固掌握基础操作，对于更好地实现图像处理是非常有帮助的。
 ## 图像加法运算
+
+
+## 掩码
+当使用掩模参数时，操作只会在掩模值为非空的像素点上执行，并将其他像素点的值置为0。
