--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/傅里叶变换.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/傅里叶变换.md
@@ -5,3 +5,67 @@
 频率域处理是先将图像变换到频率域，然后在频率域对图像进行处理，最后再通过反变换将图像从频率域变换到空间域。傅里叶变换是应用最广泛的一种频域变换，它能够将图像从空间域变换到频率域，而逆傅里叶变换能够将频率域信息变换到空间域内。傅里叶变换在图像处理领域内有着非常重要的作用。
 
 ## 理论基础
+傅里叶变换是一种数学工具，它可以将一个信号从时域转换为频域。这有助于研究信号的频率分布，并且可以用来分析信号的不同特征。傅里叶变换对于信号处理、通信、图像处理等领域都有重要作用。
+
+在图像处理过程中，傅里叶变换就是将图像分解为正弦分量和余弦分量两部分，即将图像从空间域转换到频率域（以下简称频域）。数字图像经过傅里叶变换后，得到的频域值是复数。因此，显示傅里叶变换的结果需要使用实数图像（real image）加虚数图像（complex image），或者幅度图像（magnitude image）加相位图像（phase image）的形式。
+
+因为幅度图像包含了原图像中我们所需要的大部分信息，所以在图像处理过程中，**通常仅使用幅度图像**。当然，如果希望先在频域内对图像进行处理，再通过逆傅里叶变换得到修改后的空域图像，就必须同时保留幅度图像和相位图像。
+
+对图像进行傅里叶变换后，我们会得到图像中的低频和高频信息。低频信息对应图像内变化缓慢的灰度分量。高频信息对应图像内变化越来越快的灰度分量，是由灰度的尖锐过渡造成的。傅里叶变换的目的，就是为了将图像从空域转换到频域，并在频域内实现对图像内特定对象的处理，然后再对经过处理的频域图像进行逆傅里叶变换得到空域图像。傅里叶变换在图像处理领域发挥着非常关键的作用，可以实现图像增强、图像去噪、边缘检测、特征提取、图像压缩和加密等。
+## NumPy傅里叶变换
+### 实现傅里叶变换
+```python
+返回值 = numpy.fft.fft2(原始图像)
+返回值=numpy.fft.fftshift(原始频谱)
+像素新值=20*np.log(np.abs(频谱值))
+```
+
+> 用Numpy实现傅里叶变换，观察得到的频谱图像
+
+```python
+import cv2
+import numpy as np
+import matplotlib.pyplot as plt
+img = cv2.imread('image\\lena.bmp',0)
+f = np.fft.fft2(img)
+fshift = np.fft.fftshift(f)
+magnitude_spectrum = 20*np.log(np.abs(fshift))
+plt.subplot(121)
+plt.imshow(img, cmap = 'gray')
+plt.title('original')
+plt.axis('off')
+plt.subplot(122)
+plt.imshow(magnitude_spectrum, cmap = 'gray')
+plt.title('result')
+plt.axis('off')
+plt.show()
+```
+
+### 实现逆傅里叶变换
+```python
+调整后的频谱 = numpy.fft.ifftshift(原始频谱)
+返回值=numpy.fft.ifft2(频域数据)
+iimg = np.abs(逆傅里叶变换结果)
+```
+
+> 在Numpy内实现傅里叶变换、逆傅里叶变换，观察逆傅里叶变换的结果图像
+
+```python
+import cv2
+import numpy as np
+import matplotlib.pyplot as plt
+img = cv2.imread('image\\boat.bmp',0)
+f = np.fft.fft2(img)
+fshift = np.fft.fftshift(f)
+ishift = np.fft.ifftshift(fshift)
+iimg = np.fft.ifft2(ishift)
+#print(iimg)
+iimg = np.abs(iimg)
+#print(iimg)
+plt.subplot(121), plt.imshow(img, cmap = 'gray')
+plt.title('original'), plt.axis('off')
+plt.subplot(122), plt.imshow(iimg, cmap = 'gray')
+plt.title('iimg'), plt.axis('off')
+plt.show()
+```
+## OpenCV傅里叶变换
