--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像金字塔.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像金字塔.md
@@ -5,3 +5,10 @@
 ![](https://s2.loli.net/2022/12/13/aijKbWugBh83Fs9.png)
 
 ## 理论基础
+图像金字塔是同一图像不同分辨率的子图集合，是通过对原图像不断地向下采样而产生的，即由高分辨率的图像（大尺寸）产生低分辨率的近似图像（小尺寸）。最简单的图像金字塔可以通过不断地删除图像的偶数行和偶数列得到。例如，有一幅图像，其大小是N*N，删除其偶数行和偶数列后得到一幅(N/2)*(N/2)大小的图像。经过上述处理后，图像大小变为原来的四分之一，不断地重复该过程，就可以得到该图像的图像金字塔。也可以先对原始图像滤波，得到原始图像的近似图像，然后将近似图像的偶数行和偶数列删除以获取向下采样的结果。有多种滤波器可以选择。
+
+
++ 邻域滤波器：采用邻域平均技术求原始图像的近似图像。该滤波器能够产生平均金字塔。
++ 高斯滤波器：采用高斯滤波器对原始图像进行滤波，得到高斯金字塔。这是OpenCV函数cv2.pyrDown()所采用的方式。
+
+![](https://s2.loli.net/2022/12/14/klzeKmB5haqYH7c.png)
