--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像分隔与提取.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像分隔与提取.md
@@ -1,3 +1,8 @@
 在图像处理的过程中，经常需要从图像中将前景对象作为目标图像分割或者提取出来。例如，在视频监控中，观测到的是固定背景下的视频内容，而我们对背景本身并无兴趣，感兴趣的是背景中出现的车辆、行人或者其他对象。我们希望将这些对象从视频中提取出来，而忽略那些没有对象进入背景的视频内容。
 
-## 算法原理
+## 用分水岭算法实现图像分割与提取
+
+### 算法原理
+
+图像分割是图像处理过程中一种非常重要的操作。分水岭算法将图像形象地比喻为地理学上的地形表面，实现图像分割，该算法非常有效。
+
