--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像轮廓.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像轮廓.md
@@ -1,3 +1,222 @@
 边缘检测虽然能够检测出边缘，但边缘是不连续的，检测到的边缘并不是一个整体。图像轮廓是指将边缘连接起来形成的一个整体，用于后续的计算。
 
 OpenCV提供了查找图像轮廓的函数cv2.findContours()，该函数能够查找图像内的轮廓信息，而函数cv2.drawContours()能够将轮廓绘制出来。图像轮廓是图像中非常重要的一个特征信息，通过对图像轮廓的操作，我们能够获取目标图像的大小、位置、方向等信息。
+
+## 查找并绘制轮廓
+一个轮廓对应着一系列的点，这些点以某种方式表示图像中的一条曲线。在OpenCV中，函数cv2.findContours()用于查找图像的轮廓，并能够根据参数返回特定表示方式的轮廓（曲线）。函数cv2.drawContours()能够将查找到的轮廓绘制到图像上，该函数可以根据参数在图像上绘制不同样式（实心/空心点，以及线条的不同粗细、颜色等）的轮廓，可以绘制全部轮廓也可以仅绘制指定的轮廓。
+
+```python
+image, contours, hierarchy = cv2.findContours( image, mode, method)
+```
+
++ image：与函数参数中的原始图像image一致。 # 4.x 中已被删除
++ contours：返回的轮廓。 
++ hierarchy：图像的拓扑信息（轮廓层次）
++ image：原始图像。8位单通道图像，所有非零值被处理为1，所有零值保持不变。也就是说灰度图像会被自动处理为二值图像。在实际操作时，可以根据需要，预先使用阈值处理等函数将待查找轮廓的图像处理为二值图像。
++ mode：轮廓检索模式。
++ method：轮廓的近似方法。
+
+### 返回值contours
++ type属性是list类型，list的每个元素都是图像的一个轮廓
++ print (len(contours)) 轮廓个数
++ 每一个轮廓都是由若干个像素点构成的，点的个数不固定，具体个数取决于轮廓的形状。  print (len(contours[0])) 
++ 轮廓内的点    print (contours[0])   #打印第0个轮廓中的像素点
+      
+### 返回值hierarchy
+图像内的轮廓可能位于不同的位置。比如，一个轮廓在另一个轮廓的内部。在这种情况下，我们将外部的轮廓称为父轮廓，内部的轮廓称为子轮廓。每个轮廓contours[i]对应4个元素来说明当前轮廓的层次关系。
+
+```python
+[Next, Previous, First_Child, Parent]
+```
+
++ Next：后一个轮廓的索引编号。
++ Previous：前一个轮廓的索引编号。
++ First_Child：第1个子轮廓的索引编号。
++ Parent：父轮廓的索引编号。
+  
+### 参数image
+该参数表示输入的图像，必须是8位单通道二值图像。一般情况下，都是将图像处理为二值图像后，再将其作为image参数使用的。
+### 参数mode
+
++ cv2.RETR_EXTERNAL：只检测外轮廓。
++ cv2.RETR_LIST：对检测到的轮廓不建立等级关系。
++ cv2.RETR_CCOMP：检索所有轮廓并将它们组织成两级层次结构。上面的一层为外边界，下面的一层为内孔的边界。如果内孔内还有一个连通物体，那么这个物体的边界仍然位于顶层。
++ cv2.RETR_TREE：建立一个等级树结构的轮廓。
+
+### 参数method
+
++ cv2.CHAIN_APPROX_NONE：存储所有的轮廓点，相邻两个点的像素位置差不超过1，即max(abs(x1-x2), abs(y2-y1))=1。
++ cv2.CHAIN_APPROX_SIMPLE：压缩水平方向、垂直方向、对角线方向的元素，只保留该方向的终点坐标。例如，在极端的情况下，一个矩形只需要用4个点来保存轮廓信息。
++ cv2.CHAIN_APPROX_TC89_L1：使用teh-Chinl chain近似算法的一种风格。
++ cv2.CHAIN_APPROX_TC89_KCOS：使用teh-Chinl chain近似算法的一种风格。
+
+### 绘制图像轮廓：drawContours函数 
+```python
+image=cv2.drawContours(image,contours,contourIdx,color[,thickness[,lineType[,hierarchy[,maxLevel[,offset]]]]] )
+```
+
++ image：待绘制轮廓的图像。需要注意，函数cv2.drawContours()会在图像image上直接绘制轮廓。也就是说，在函数执行完以后，image不再是原始图像，而是包含了轮廓的图像。因此，如果图像image还有其他用途的话，则需要预先复制一份，将该副本图像传递给函数cv2.drawContours()使用。
++ contours：需要绘制的轮廓。该参数的类型与函数cv2.findContours()的输出contours相同，都是list类型。
++ contourIdx：需要绘制的边缘索引，告诉函数cv2.drawContours()要绘制某一条轮廓还是全部轮廓。如果该参数是一个整数或者为零，则表示绘制对应索引号的轮廓；如果该值为负数（通常为“-1”），则表示绘制全部轮廓。
++ color：绘制的颜色，用BGR格式表示。
++ thickness：可选参数，表示绘制轮廓时所用画笔的粗细。如将该值设置为“-1”，则表示要绘制实心轮廓。
++ lineType：可选参数，表示绘制轮廓时所用的线型。
++ hierarchy：对应函数cv2.findContours()所输出的层次信息。
++ maxLevel：控制所绘制的轮廓层次的深度。如果值为0，表示仅仅绘制第0层的轮廓；如果值为其他的非零正数，表示绘制最高层及以下的相同数量层级的轮廓。
++ offset：偏移参数。该参数使轮廓偏移到不同的位置展示出来。
+  
+```python
+import cv2
+o = cv2.imread('contours.bmp')
+cv2.imshow("original", o)
+gray = cv2.cvtColor(o, cv2.COLOR_BGR2GRAY)
+ret, binary = cv2.threshold(gray,127,255, cv2.THRESH_BINARY)
+image, contours, hierarchy = cv2.findContours(binary,
+                                        cv2.RETR_EXTERNAL,
+                                        cv2.CHAIN_APPROX_SIMPLE)
+o=cv2.drawContours(o, contours, -1, (0,0,255),5)
+cv2.imshow("result", o)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![](https://s2.loli.net/2022/12/15/bm9RyCMU7lBw6Dg.png)
+
+## 矩特征
+
+```python
+retval = cv2.moments( array[, binaryImage] ) # 矩的计算：moments函数
+retval =cv2.contourArea((contour [, oriented] )) # 计算轮廓的面积：contourArea函数
+retval = cv2.arcLength( curve, closed ) # 计算轮廓的长度：arcLength函数
+````
+
++ array：可以是点集，也可以是灰度图像或者二值图像。当array是点集时，函数会把这些点集当成轮廓中的顶点，把整个点集作为一条轮廓，而不是把它们当成独立的点来看待。
++ binaryImage：该参数为True时，array内所有的非零值都被处理为1。该参数仅在参数array为图像时有效。
+
++ contour是轮廓。
++ oriented是布尔型值。当它为True 时，返回的值包含正/负号，用来表示轮廓是顺时针还是逆时针的。该参数的默认值是False，表示返回的retval是一个绝对值。
+
++ curve是轮廓。
++ closed是布尔型值，用来表示轮廓是否是封闭的。该值为True时，表示轮廓是封闭的。
+
+### 该函数的返回值retval是矩特征，主要包括
+
+（1）空间矩
+
++ 零阶矩：m00
++ 一阶矩：m10, m01
++ 二阶矩：m20, m11, m02
++ 三阶矩：m30, m21, m12, m03
+
+（2）中心矩
++ 二阶中心矩：mu20, mu11, mu02
++ 三阶中心矩：mu30, mu21, mu12, mu03
+
+（3）归一化中心矩
++ 二阶Hu矩：nu20, nu11, nu02
++ 三阶Hu矩：nu30, nu21, nu12, nu03
+
+## Hu矩
+
+Hu矩是归一化中心矩的线性组合。Hu矩在图像旋转、缩放、平移等操作后，仍能保持矩的不变性，所以经常会使用Hu距来识别图像的特征。
+
+### 形状匹配
+
+```python
+retval = cv2.matchShapes( contour1, contour2, method, parameter )
+```
+
+### 轮廓拟合
+
+```python
+retval = cv2.boundingRect( array )
+```
+
+
+
+## 凸包
+逼近多边形是轮廓的高度近似，但是有时候，我们希望使用一个多边形的凸包来简化它。凸包跟逼近多边形很像，只不过它是物体最外层的“凸”多边形。凸包指的是完全包含原有轮廓，并且仅由轮廓上的点所构成的多边形。凸包的每一处都是凸的，即在凸包内连接任意两点的直线都在凸包的内部。在凸包内，任意连续三个点的内角小于180°。
+
+### 获取凸包
+
+```python
+hull = cv2.convexHull( points[, clockwise[, returnPoints]] )
+```
+
+hull为凸包角点。
+
++ points：轮廓。
++ clockwise：布尔型值。该值为True时，凸包角点将按顺时针方向排列；该值为False时，则以逆时针方向排列凸包角点。
++ returnPoints：布尔型值。默认值是True，函数返回凸包角点的x/y轴坐标；当为False时，函数返回轮廓中凸包角点的索引。
+
+```python
+import cv2
+# --------------读取并绘制原始图像------------------
+o = cv2.imread('hand.bmp')
+cv2.imshow("original", o)
+# --------------提取轮廓------------------
+gray = cv2.cvtColor(o, cv2.COLOR_BGR2GRAY)
+ret, binary = cv2.threshold(gray,127,255, cv2.THRESH_BINARY)
+image, contours, hierarchy = cv2.findContours(binary,
+                                        cv2.RETR_LIST,
+                                        cv2.CHAIN_APPROX_SIMPLE)
+# --------------寻找凸包，得到凸包的角点------------------
+hull = cv2.convexHull(contours[0])
+# --------------绘制凸包------------------
+cv2.polylines(o, [hull], True, (0, 255, 0), 2)
+# --------------显示凸包------------------
+cv2.imshow("result", o)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![](https://s2.loli.net/2022/12/15/wt3EJWjy2iIUGx9.png)
+
+### 凸缺陷  
+凸包与轮廓之间的部分，称为凸缺陷。在OpenCV中使用函数cv2.convexityDefects()获取凸缺陷。
+
+```python
+convexityDefects = cv2.convexityDefects( contour, convexhull )
+```
+
++ contour是轮廓。
++ convexhull是凸包。
+
+用cv2.convexityDefects()计算凸缺陷时，要使用凸包作为参数。在查找该凸包时，所使用函数cv2.convexHull()的参数returnPoints的值必须是False。
+
+```python
+import cv2
+#----------------原图--------------------------
+img = cv2.imread('hand.bmp')
+cv2.imshow('original', img)
+#----------------构造轮廓--------------------------
+gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)
+ret, binary = cv2.threshold(gray, 127, 255,0)
+image, contours, hierarchy = cv2.findContours(binary,
+                                        cv2.RETR_TREE,
+                                        cv2.CHAIN_APPROX_SIMPLE)
+#----------------凸包--------------------------
+cnt = contours[0]
+hull = cv2.convexHull(cnt, returnPoints = False)
+defects = cv2.convexityDefects(cnt, hull)
+print("defects=\n", defects)
+#----------------构造凸缺陷--------------------------
+for i in range(defects.shape[0]):
+    s, e, f, d = defects[i,0]
+    start = tuple(cnt[s][0])
+    end = tuple(cnt[e][0])
+    far = tuple(cnt[f][0])
+    cv2.line(img, start, end, [0,0,255],2)
+    cv2.circle(img, far,5, [255,0,0], -1)
+#----------------显示结果，释放图像--------------------------
+cv2.imshow('result', img)
+cv2.waitKey(0)
+cv2.destroyAllWindows()
+```
+
+![](https://s2.loli.net/2022/12/15/X3bV1EU4NdmakIH.png)
+
+### 几何学测试
+```python
+retval = cv2.isContourConvex( contour )
+```
