--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/形态学操作.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/形态学操作.md
@@ -3,3 +3,287 @@
 形态学操作主要包含：腐蚀、膨胀、开运算、闭运算、形态学梯度（Morphological Gradient）运算、顶帽运算（礼帽运算）、黑帽运算等操作。腐蚀操作和膨胀操作是形态学运算的基础，将腐蚀和膨胀操作进行结合，就可以实现开运算、闭运算、形态学梯度运算、顶帽运算、黑帽运算、击中击不中等不同形式的运算。
 
 ## 腐蚀
+
+腐蚀是最基本的形态学操作之一，它能够将图像的边界点消除，使图像沿着边界向内收缩，也可以将小于指定结构体元素的部分去除。
+
+在腐蚀过程中，通常使用一个结构元来逐个像素地扫描要被腐蚀的图像，并根据结构元和被腐蚀图像的关系来确定腐蚀结果。腐蚀操作等形态学操作是逐个像素地来决定值的，每次判定的点都是与结构元中心点所对应的点。
+
+整幅图像的背景色是黑色的，前景对象是一个白色的圆形。图像左上角的深色小方块是遍历图像所使用的结构元。在腐蚀过程中，要将该结构元逐个像素地遍历整幅图像，并根据结构元与被腐蚀图像的关系，来确定腐蚀结果图像中对应结构元中心点位置的像素点的值。
+
+![](https://s2.loli.net/2022/12/15/XqnMaxmD4O1GSNL.png)
+
+腐蚀操作等形态学操作是逐个像素地来决定值的，每次判定的点都是与结构元中心点所对应的点。腐蚀的结果就是前景色的白色圆直径变小。上述结构元也被称为核。
+
+![](https://s2.loli.net/2022/12/15/ZRLwUX3PzlH7TeV.png)
+
+● 图(a)表示要被腐蚀的img。
+
+● 图(b)是核kernel。
+
+● 图(c)中的阴影部分是kernel在遍历img时，kernel完全位于前景对象内部时的3个全部可能位置；此时，核中心分别位于img[2,1]、img[2,2]和img[2,3]处。
+
+● 图(d)是腐蚀结果rst，即在kernel完全位于前景图象中时，**将其中心点所对应的rst中像素点的值置为1；当kernel不完全位于前景图像中时，将其中心点对应的rst中像素点的值置为0**。
+
+```python
+dst = cv2.erode( src, kernel[, anchor[, iterations[, borderType[, borderValue]]]] )
+```
+
+● dst是腐蚀后所输出的目标图像，该图像和原始图像具有同样的类型和大小。
+
+● src是需要进行腐蚀的原始图像，图像的通道数可以是任意的。但是要求图像的深度必须是CV_8U、CV_16U、CV_16S、CV_32F、CV_64F中的一种。
+
+● kernel代表腐蚀操作时所采用的结构类型。它可以自定义生成，也可以通过函数cv2.getStructuringElement()生成。
+
+● anchor代表element结构中锚点的位置。该值默认为(-1, -1)，在核的中心位置。
+
+● iterations是腐蚀操作迭代的次数，该值默认为1，即只进行一次腐蚀操作。
+
+● borderType代表边界样式，一般采用其默认值BORDER_CONSTANT。
+
+● borderValue是边界值，一般采用默认值。在C++中提供了函数morphologyDefault BorderValue()来返回腐蚀和膨胀的“魔力（magic）”边界值，Python不支持该函数。
+
+![](https://s2.loli.net/2022/12/15/Kn6riGjFUZdODkA.png)
+
+```python
+import cv2
+import numpy as np
+o=cv2.imread("erode.bmp", cv2.IMREAD_UNCHANGED)
+kernel = np.ones((9,9), np.uint8)
+erosion = cv2.erode(o, kernel, iterations = 5)
+cv2.imshow("orriginal", o)
+cv2.imshow("erosion", erosion)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![](https://s2.loli.net/2022/12/15/aUnJhtiqGOH7Mfz.png)
+
+左图是原始图像，右图是腐蚀处理结果。从图中可以看到，腐蚀操作将原始图像内的毛刺腐蚀掉了，而且，由于本例使用了更大的核、更多的迭代次数，所以图像被腐蚀得更严重了。
+
+## 膨胀
+
+膨胀操作是形态学中另外一种基本的操作。膨胀操作和腐蚀操作的作用是相反的，膨胀操作能对图像的边界进行扩张。膨胀操作将与当前对象（前景）接触到的背景点合并到当前对象内，从而实现将图像的边界点向外扩张。如果图像内两个对象的距离较近，那么在膨胀的过程中，两个对象可能会连通在一起。膨胀操作对填补图像分割后图像内所存在的空白相当有帮助。
+
+![](https://s2.loli.net/2022/12/15/MBJPKxuzHy9iLGs.png)
+
+在膨胀过程中，也是使用一个结构元来逐个像素地扫描要被膨胀的图像，并根据结构元和待膨胀图像的关系来确定膨胀结果。
+
+```python
+import cv2
+import numpy as np
+o=cv2.imread("dilation.bmp", cv2.IMREAD_UNCHANGED)
+kernel = np.ones((9,9), np.uint8)
+dilation = cv2.dilate(o, kernel)
+cv2.imshow("original", o)
+cv2.imshow("dilation", dilation)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![image-20221215163709520](https://s2.loli.net/2022/12/15/aMFBNtr789DzhP6.png)
+
+## 通用形态学函数
+
+腐蚀操作和膨胀操作是形态学运算的基础，将腐蚀和膨胀操作进行组合，就可以实现开运算、闭运算（关运算）、形态学梯度（Morphological Gradient）运算、礼帽运算（顶帽运算）、黑帽运算、击中击不中等多种不同形式的运算。
+
+```python
+dst = cv2.morphologyEx( src, op, kernel[, anchor[, iterations[, borderType[,borderValue]]]]] )
+```
+
+● dst代表经过形态学处理后所输出的目标图像，该图像和原始图像具有同样的类型和大小。
+
+● src代表需要进行形态学操作的原始图像。图像的通道数可以是任意的，但是要求图像的深度必须是CV_8U、CV_16U、CV_16S、CV_32F、CV_64F中的一种。
+
+● op代表操作类型，各种形态学运算的操作规则均是将腐蚀和膨胀操作进行组合而得到的。
+
+● 参数kernel、anchor、iterations、borderType、borderValue与函数cv2.erode()内相应参数的含义一致。
+
+![](https://s2.loli.net/2022/12/15/Xo2IJcudsUig9wn.png)
+
+## 开运算
+
+开运算进行的操作是先将图像腐蚀，再对腐蚀的结果进行膨胀。开运算可以用于去噪、计数等。
+
+```python
+#         opening = cv2.morphologyEx(img, cv2.MORPH_OPEN, kernel)
+import cv2
+import numpy as np
+img1=cv2.imread("opening.bmp")
+img2=cv2.imread("opening2.bmp")
+k=np.ones((10,10), np.uint8)
+r1=cv2.morphologyEx(img1, cv2.MORPH_OPEN, k)
+r2=cv2.morphologyEx(img2, cv2.MORPH_OPEN, k)
+cv2.imshow("img1", img1)
+cv2.imshow("result1", r1)
+cv2.imshow("img2", img2)
+cv2.imshow("result2", r2)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![image-20221215163825701](https://s2.loli.net/2022/12/15/FNiIHAtSv7OQxXY.png)
+
+● 图(a)是原始图像img1。
+
+● 图(b)是原始图像img1经过开运算得到的图像r1。
+
+● 图(c)是原始图像img2。
+
+● 图(d)是原始图像img2经过开运算得到的图像r2。
+
+## 闭运算
+
+闭运算是先膨胀、后腐蚀的运算，它有助于关闭前景物体内部的小孔，或去除物体上的小黑点，还可以将不同的前景图像进行连接。
+
+```python
+#         closing = cv2.morphologyEx(img, cv2.MORPH_CLOSE, kernel)
+import cv2
+import numpy as np
+img1=cv2.imread("closing.bmp")
+img2=cv2.imread("closing2.bmp")
+k=np.ones((10,10), np.uint8)
+r1=cv2.morphologyEx(img1, cv2.MORPH_CLOSE, k, iterations=3)
+r2=cv2.morphologyEx(img2, cv2.MORPH_CLOSE, k, iterations=3)
+cv2.imshow("img1", img1)
+cv2.imshow("result1", r1)
+cv2.imshow("img2", img2)
+cv2.imshow("result2", r2)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![image-20221215164336200](https://s2.loli.net/2022/12/15/c9sB21nQoHbyqRd.png)
+
+● 图(a)是原始图像img1。
+
+● 图(b)是原始图像img1经过闭运算得到的图像r1。
+
+● 图(c)是原始图像img2。 
+
+● 图(d)是原始图像img2经过闭运算得到的图像r2。
+
+## 形态学梯度运算
+
+形态学梯度运算是用图像的膨胀图像减腐蚀图像的操作，该操作可以获取原始图像中前景图像的边缘。
+
+```python
+#         result = cv2.morphologyEx(img, cv2.MORPH_GRADIENT, kernel)
+import cv2
+import numpy as np
+o=cv2.imread("gradient.bmp", cv2.IMREAD_UNCHANGED)
+k=np.ones((5,5), np.uint8)
+r=cv2.morphologyEx(o, cv2.MORPH_GRADIENT, k)
+cv2.imshow("original", o)
+cv2.imshow("result", r)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![image-20221215164703468](https://s2.loli.net/2022/12/15/eT2tVgcNpQsCwBv.png)
+
+## 礼帽运算
+
+礼帽运算是用原始图像减去其开运算图像的操作。礼帽运算能够获取图像的噪声信息，或者得到比原始图像的边缘更亮的边缘信息。
+
+```python
+#         result = cv2.morphologyEx(img, cv2.MORPH_TOPHAT, kernel)
+import cv2
+import numpy as np
+o1=cv2.imread("tophat.bmp", cv2.IMREAD_UNCHANGED)
+o2=cv2.imread("lena.bmp", cv2.IMREAD_UNCHANGED)
+k=np.ones((5,5), np.uint8)
+r1=cv2.morphologyEx(o1, cv2.MORPH_TOPHAT, k)
+r2=cv2.morphologyEx(o2, cv2.MORPH_TOPHAT, k)
+cv2.imshow("original1", o1)
+cv2.imshow("original2", o2)
+cv2.imshow("result1", r1)
+cv2.imshow("result2", r2)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+
+
+![image-20221215164729642](https://s2.loli.net/2022/12/15/ar6TOg2DCUu9Zpx.png)
+
+● 图(a)是原始图像o1。
+
+● 图(b)是原始图像o2。
+
+● 图(c)是原始图像o1经过礼帽运算得到的图像r1。
+
+● 图(d)是原始图像o2经过礼帽运算得到的图像r2。
+
+## 黑帽运算
+
+黑帽运算是用闭运算图像减去原始图像的操作。黑帽运算能够获取图像内部的小孔，或前景色中的小黑点，或者得到比原始图像的边缘更暗的边缘部分。
+
+```python
+#         result = cv2.morphologyEx(img, cv2.MORPH_BLACKHAT, kernel)
+import cv2
+import numpy as np
+o1=cv2.imread("blackhat.bmp", cv2.IMREAD_UNCHANGED)
+o2=cv2.imread("lena.bmp", cv2.IMREAD_UNCHANGED)
+k=np.ones((5,5), np.uint8)
+r1=cv2.morphologyEx(o1, cv2.MORPH_BLACKHAT, k)
+r2=cv2.morphologyEx(o2, cv2.MORPH_BLACKHAT, k)
+cv2.imshow("original1", o1)
+cv2.imshow("original2", o2)
+cv2.imshow("result1", r1)
+cv2.imshow("result2", r2)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![image-20221215164829048](https://s2.loli.net/2022/12/15/qiwFSBoVabZE73c.png)
+
+● 图(a)是原始图像o1。
+
+● 图(b)是原始图像o2。
+
+● 图(c)是原始图像o1经过黑帽运算得到的图像r1。
+
+● 图(d)是原始图像o2经过黑帽运算得到的图像r2。
+
+## 核函数
+
+在进行形态学操作时，必须使用一个特定的核（结构元）。该核可以自定义生成，也可以通过函数cv2.getStructuringElement()构造。函数cv2.getStructuringElement()能够构造并返回一个用于形态学处理所使用的结构元素。该函数的语法格式为：
+
+![image-20221215164136971](https://s2.loli.net/2022/12/15/jsYSKmOkr2PT1bJ.png)
+
+```python
+retval = cv2.getStructuringElement( shape, ksize[, anchor])
+```
+
+● shape代表形状类型
+
+● ksize代表结构元素的大小。
+
+● anchor代表结构元素中的锚点位置。默认的值是(-1, -1)，是形状的中心。只有十字星型的形状与锚点位置紧密相关。在其他情况下，锚点位置仅用于形态学运算结果的调整。
+
+```python
+import cv2
+o=cv2.imread("kernel.bmp", cv2.IMREAD_UNCHANGED)
+kernel1 = cv2.getStructuringElement(cv2.MORPH_RECT, (59,59))
+kernel2 = cv2.getStructuringElement(cv2.MORPH_CROSS, (59,59))
+kernel3 = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (59,59))
+dst1 = cv2.dilate(o, kernel1)
+dst2 = cv2.dilate(o, kernel2)
+dst3 = cv2.dilate(o, kernel3)
+cv2.imshow("orriginal", o)
+cv2.imshow("dst1", dst1)
+cv2.imshow("dst2", dst2)
+cv2.imshow("dst3", dst3)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![image-20221215164050036](https://s2.loli.net/2022/12/15/y9poZbhKfw2Tej5.png)
+
+● 图(a)是原始图像o1。
+
+● 图(b)是使用矩形结构核对原始图像进行膨胀操作的结果dst1。
+
+● 图(c)是使用十字结构核对原始图像进行膨胀操作的结果dst2。
+
+● 图(d)是使用椭圆结构核对原始图像进行膨胀操作的结果dst3。
