--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/模板匹配.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/模板匹配.md
@@ -1,1 +1,43 @@
 模板匹配是指在当前图像A内寻找与图像B最相似的部分，一般将图像A称为输入图像，将图像B称为模板图像。模板匹配的操作方法是将模板图像B在图像A上滑动，遍历所有像素以完成匹配。
+
+## 模板匹配基础
+
+```python
+        result = cv2.matchTemplate(image, templ, method[, mask ] )
+```
+
++ image为原始图像，必须是8位或者32位的浮点型图像。
++ templ为模板图像。它的尺寸必须小于或等于原始图像，并且与原始图像具有同样的类型。
++ method为匹配方法。该参数通过TemplateMatchModes实现，有6种可能的值
+
+![](https://s2.loli.net/2022/12/15/6ovODMjzax59cpi.png)
+
+
+
+![](https://s2.loli.net/2022/12/15/k5LMz3TKdhRl78i.png)
+
+> 使用cv2.matchTemplate()函数进行模板匹配。要求参数method的值设置为cv2.TM_CCOEFF，显示函数的返回结果及匹配结果。
+
+```python
+import cv2
+import numpy as np
+from matplotlib import pyplot as plt
+img = cv2.imread('lena512g.bmp',0)
+template = cv2.imread('temp.bmp',0)
+tw, th = template.shape[::-1]
+rv = cv2.matchTemplate(img, template, cv2.TM_CCOEFF)
+minVal, maxVal, minLoc, maxLoc = cv2.minMaxLoc(rv)
+topLeft = maxLoc
+bottomRight = (topLeft[0] + tw, topLeft[1] + th)
+cv2.rectangle(img, topLeft, bottomRight, 255, 2)
+plt.subplot(121), plt.imshow(rv, cmap = 'gray')
+plt.title('Matching Result'), plt.xticks([]), plt.yticks([])
+plt.subplot(122), plt.imshow(img, cmap = 'gray')
+plt.title('Detected Point'), plt.xticks([]), plt.yticks([])
+plt.show()
+```
+
+![](https://s2.loli.net/2022/12/15/QAi6DCYj4vaO9Pm.png)
+
+## 多模板匹配
+
