--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/色彩空间类型转换.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/色彩空间类型转换.md
@@ -1,3 +1,105 @@
 RGB图像是一种比较常见的色彩空间类型，除此以外还有一些其他的色彩空间，比较常见的包括GRAY色彩空间（灰度图像）、XYZ色彩空间、YCrCb色彩空间、HSV色彩空间、HLS色彩空间、CIEL*a*b*色彩空间、CIEL*u*v*色彩空间、Bayer色彩空间等。每个色彩空间都有自己擅长的处理问题的领域，因此，为了更方便地处理某个具体问题，就要用到色彩空间类型转换。
 
-色彩空间类型转换是指，将图像从一个色彩空间转换到另外一个色彩空间。色彩空间也称为颜色空间、彩色空间、颜色模型、彩色系统、彩色模型、色彩模型等。
+色彩空间类型转换是指，将图像从一个色彩空间转换到另外一个色彩空间。例如，在使用OpenCV处理图像时，可能会在RGB色彩空间和HSV色彩空间之间进行转换。在进行图像的特征提取、距离计算时，往往先将图像从RGB色彩空间处理为灰度色彩空间。在一些应用中，可能需要将色彩空间的图像转换为二值图像。
+
+色彩空间也称为颜色空间、彩色空间、颜色模型、彩色系统、彩色模型、色彩模型等。
+
+## 色彩空间基础
+
+###  HLS色彩空间
+
+
+
+### CIEL\*u\*v*色彩空间
+
+CIEL*u*v*色彩空间同CIEL*a*b*色彩空间一样，都是均匀的颜色模型。CIEL*u*v*色彩空间与设备无关，适用于显示器显示和根据加色原理进行组合的场合，该模型中比较强调对红色的表示，即对红色的变化比较敏感，但对蓝色的变化不太敏感。
+
+从RGB色彩空间到XYZ色彩空间的转换：
+
+![image-20221215165651713](https://s2.loli.net/2022/12/15/BJxKcWjTzDha3Yp.png)
+
+### Bayer色彩空间
+
+Bayer色彩空间（Bayer模型）被广泛地应用在CCD和CMOS相机中。
+
+![image-20221215165557238](https://s2.loli.net/2022/12/15/KWHZ2NJvPGLo98a.png)
+
+输出的RGB图像的像素点值，是根据当前点的1个、2个或4个邻域像素点的相同颜色的像素值获得的。上述模式能够通过移动一个左边的像素或者上方的像素来完成修改。在函数cv2.cvtColor()的色彩空间转换参数中，通常使用两个特定的参数x和y来表示特定的模式。该模式组成通过图4-1第二行中的第2列与第3列的值来指定。
+
+## 类型转换函数
+
+```python
+dst = cv2.cvtColor( src, code [, dstCn] )
+```
+
+● dst表示输出图像，与原始输入图像具有同样的数据类型和深度。
+
+● src表示原始输入图像。可以是8位无符号图像、16位无符号图像，或者单精度浮点数等。
+
+● code是色彩空间转换码，表4-2展示了其枚举值。
+
+● dstCn是目标图像的通道数。如果参数为默认的0，则通道数自动通过原始输入图像和code得到。
+
+## HSV色彩空间讨论
+
+RGB色彩空间是一种被广泛接受的色彩空间，但是该色彩空间过于抽象，我们不能够直接通过其值感知具体的色彩。我们更习惯使用直观的方式来感知颜色，HSV色彩空间提供了这样的方式。通过HSV色彩空间，我们能够更加方便地通过色调、饱和度和亮度来感知颜色。
+
+HSV色彩空间从心理学和视觉的角度出发，提出人眼的色彩知觉主要包含三要素：
+
+● H：色调（Hue，也称为色相）。
+
+● S：饱和度（Saturation）。
+
+● V：亮度（Value）。
+
+```python
+import cv2
+img=cv2.imread("barbara.bmp")
+hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)
+h, s, v=cv2.split(hsv)
+v[:, :]=255
+newHSV=cv2.merge([h, s, v])
+art = cv2.cvtColor(newHSV, cv2.COLOR_HSV2BGR)
+cv2.imshow("img", img)
+cv2.imshow("art", art)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![](https://s2.loli.net/2022/12/15/gSvkpM2lcP61t4q.png)
+
+## alpha通道
+
+在RGB色彩空间三个通道的基础上，还可以加上一个A通道，也叫alpha通道，表示透明度。这种4个通道的色彩空间被称为RGBA色彩空间，PNG图像是一种典型的4通道图像。alpha通道的赋值范围是[0, 1]，或者[0, 255]，表示从透明到不透明。
+
+> 编写一个程序，对图像的alpha通道进行处理
+
+```python
+import cv2
+img=cv2.imread("lenacolor.png")
+bgra = cv2.cvtColor(img, cv2.COLOR_BGR2BGRA)
+b, g, r, a=cv2.split(bgra)
+a[:, :]=125
+bgra125=cv2.merge([b, g, r, a])
+a[:, :]=0
+bgra0=cv2.merge([b, g, r, a])
+cv2.imshow("img", img)
+cv2.imshow("bgra", bgra)
+cv2.imshow("bgra125", bgra125)
+cv2.imshow("bgra0", bgra0)
+cv2.waitKey()
+cv2.destroyAllWindows()
+cv2.imwrite("bgra.png", bgra)
+cv2.imwrite("bgra125.png", bgra125)
+cv2.imwrite("bgra0.png", bgra0)
+```
+
+![image-20221215170040850](https://s2.loli.net/2022/12/15/pzs87cxLkHyQETi.png)
+
+● 图(a)是原始图像lena。
+
+● 图(b)是由原始图像lena通过色彩空间转换得到的图像bgra，该图像内alpha通道的值是默认值255。
+
+● 图(c)是将图像bgra中alpha通道值设置为0得到的。
+
+● 图(d)是将图像bgra中alpha通道值设置为125得到的。
