--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/霍夫变换.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/霍夫变换.md
@@ -1,9 +1,43 @@
-霍夫变换是一种在图像中寻找直线、圆形以及其他简单形状的方法。霍夫变换采用类似于投票的方式来获取当前图像内的形状集合，该变换由Paul Hough（霍夫）于1962年首次提出。最初的霍夫变换只能用于检测直线，经过发展后，霍夫变换不仅能够识别直线，还能识别其他简单的图形结构，常见的有圆、椭圆等。
+**霍夫变换是一种在图像中寻找直线、圆形以及其他简单形状的方法**。霍夫变换采用类似于投票的方式来获取当前图像内的形状集合，该变换由Paul Hough（霍夫）于1962年首次提出。最初的霍夫变换只能用于检测直线，经过发展后，霍夫变换不仅能够识别直线，还能识别其他简单的图形结构，常见的有圆、椭圆等。
 
 霍夫直线变换用来在图像内寻找直线，霍夫圆变换用来在图像内寻找圆。在OpenCV中，前者可以用函数cv2.HoughLines()和函数cv2.HoughLinesP()实现，后者可以用函数cv2.HoughCircles()实现。
 
+## 霍夫直线变换
+
 ### 霍夫变换原理
+
 与笛卡儿坐标系对应，我们构造一个霍夫坐标系（对应于霍夫空间）。在霍夫坐标系中，横坐标采用笛卡儿坐标系中直线的斜率k，纵坐标使用笛卡儿坐标系中直线的截距b。
+
+● 笛卡儿空间内的一条直线确定了霍夫空间内的一个点。
+
+● 霍夫空间内的一个点确定了笛卡儿空间内的一条直线。
+
+● 笛卡儿空间内的点（x0, y0）映射到霍夫空间，就是直线b=-x0k+y0。
+
+● 霍夫空间内的直线b=-x0k+y0映射到笛卡儿空间，就是点（x0, y0）。
+
+● 笛卡儿空间内的两个点会映射为霍夫空间内两条相交于(k1,b1)的直线。
+
+● 这两个点对应的直线会映射为霍夫空间内的点(k1,b1)。
+
+![](https://s2.loli.net/2022/12/15/HDU5z1gYF68KeGc.png)
+
+如果在笛卡儿空间内，有N个点能够连成一条直线y=k1x+b1，那么在霍夫空间内就会有N条直线穿过对应的点(k1, b1)。或者反过来说，如果在霍夫空间中，有越多的直线穿过点(k1, b1)，就说明在笛卡儿空间内有越多的点位于斜率为k1，截距为b1的直线y=k1x+b1上。
+
+在霍夫空间内，经过一个点的直线越多，说明其在笛卡儿空间内映射的直线，是由越多的点所构成（穿过）的。我们知道，两个点就能构成一条直线。但是，如果有一个点是因为计算错误而产生的，那么它和另外一个点，也会构成一条直线，此时就会凭空构造出一条实际上并不存在的直线。这种情况是要极力避免的。因此，在计算中，我们希望用更多的点构造一条直线，以提高直线的可靠性。也就是说，如果一条直线是由越多点所构成的，那么它实际存在的可能性就越大，它的可靠性也就越高。因此，**霍夫变换选择直线的基本思路是：选择有尽可能多直线交汇的点**。
+
+![](https://s2.loli.net/2022/12/15/Nfr4AhTMWlBqd98.png)
+
+斜率k为无穷大，截距b无法取值。垂线无法映射到霍夫空间内。为了解决上述问题，可以考虑将笛卡儿坐标系映射到极坐标系上，在笛卡儿坐标系内使用的是斜率k和截距b，即用(k, b)表示一条直线。在极坐标系内，采用极径r（有时也用ρ表示）和极角θ来表示，即(r, θ)来表示。极坐标系中的直线可以表示为：
+
+r=xcosθ+ysinθ
+
++ 极坐标系内的一个点映射为霍夫坐标系（霍夫空间）内的一条线（曲线）。
++ 极坐标系内的一条线映射为霍夫坐标系内的一个点。
+
+直线LineA，可以使用极坐标的极径r和极角θ来表示。其中，r是直线LineA与图像原点O之间的距离，参数θ是直线LineA的垂线LineB与x轴的角度。在这种表示方法中，图像中的直线有一个（0~π）的角θ，而r的最大值是图像对角线的长度。
+
+在极坐标系内的一条直线能够通过在霍夫坐标系内相交于一点的线的数量来评估。在霍夫坐标系内，经过一个点的线越多，说明其映射在极坐标系内的直线，是由越多的点所构成（穿过）的。因此，霍夫变换选择直线的基本思路是：**选择由尽可能多条线汇成的点**。
 
 ### HoughLines函数
 OpenCV提供了函数cv2.HoughLines()用来实现霍夫直线变换，该函数要求所操作的源图像是一个**二值图像**，所以在进行霍夫变换之前要先将源图像进行二值化，或者进行Canny边缘检测。
@@ -42,3 +76,30 @@ circles=cv2.HoughCircles(image,method,dp,minDist,param1,param2,minRadius,maxRadi
 + circles：返回值，由圆心坐标和半径构成的numpy.ndarray。
 
 在调用函数cv2.HoughLinesCircles()之前，要对源图像进行平滑操作，以减少图像中的噪声，避免发生误判。
+
+> 使用HoughLinesCircles函数对一幅图像进行霍夫圆变换，并观察检测效果。
+
+```python
+import cv2
+import numpy as np
+import matplotlib.pyplot as plt
+img = cv2.imread('chess.jpg',0)
+imgo=cv2.imread('chess.jpg', -1)
+o=cv2.cvtColor(imgo, cv2.COLOR_BGR2RGB)
+oshow=o.copy()
+img = cv2.medianBlur(img,5)
+circles = cv2.HoughCircles(img, cv2.HOUGH_GRADIENT,1,300,
+                           param1=50, param2=30, minRadius=100, maxRadius=200)
+circles = np.uint16(np.around(circles))
+for i in circles[0, :]:
+    cv2.circle(o, (i[0], i[1]), i[2], (255,0,0),12)
+    cv2.circle(o, (i[0], i[1]),2, (255,0,0),12)
+ plt.subplot(121)
+ plt.imshow(oshow)
+ plt.axis('off')
+ plt.subplot(122)
+ plt.imshow(o)
+ plt.axis('off')
+```
+
+在检测中，可能需要不断调整参数才能得到最优结果。
