--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像运算.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像运算.md
@@ -1,6 +1,235 @@
 针对图像的加法运算、位运算都是比较基础的运算。但是，很多复杂的图像处理功能正是借助这些基础的运算来完成的。所以，牢固掌握基础操作，对于更好地实现图像处理是非常有帮助的。
 ## 图像加法运算
 
+```python
+import cv2
+a=cv2.imread("lena.bmp",0)
+b=a
+result1=a+b
+result2=cv2.add(a, b)
+cv2.imshow("original", a)
+cv2.imshow("result1", result1)
+cv2.imshow("result2", result2)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
 
-## 掩码
-当使用掩模参数时，操作只会在掩模值为非空的像素点上执行，并将其他像素点的值置为0。
+![image-20221215171900836](https://s2.loli.net/2022/12/15/f9dn7NhmtoWksg1.png)
+
+ 使用加号运算符计算图像像素值的和时，将和大于255的值进行了取模处理，取模后大于255的这部分值变得更小了，导致本来应该更亮的像素点变得更暗了，相加所得的图像看起来并不自然。 使用函数cv2.add()计算图像像素值的和时，将和大于255的值处理为饱和值255。图像像素值相加后让图像的像素值增大了，图像整体变亮。
+
+## 图像加权和
+
+所谓图像加权和，就是在计算两幅图像的像素值之和时，将每幅图像的权重考虑进来，可以用公式表示为：
+
+dst=saturate（src1×α+src2×β+γ）
+
+```python
+dst=cv2.addWeighted(src1, alpha, src2, beta, gamma)
+```
+
+```python
+import cv2
+lena=cv2.imread("lena512.bmp", cv2.IMREAD_UNCHANGED)
+dollar=cv2.imread("dollar.bmp", cv2.IMREAD_UNCHANGED)
+cv2.imshow("lena", lena)
+cv2.imshow("dollar", dollar)
+face1=lena[220:400,250:350]
+face2=dollar[160:340,200:300]
+add=cv2.addWeighted(face1,0.6, face2,0.4,0)
+dollar[160:340,200:300]=add
+cv2.imshow("result", dollar)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+● 左图是原始图像lena。
+
+● 中间的图是原始图像dollar。
+
+● 右图是图像lena的面部与图像dollar的面部加权混合得到的图像。
+
+![image-20221215171815873](https://s2.loli.net/2022/12/15/bc8MHN3LFYoXwVT.png)
+
+
+## 按位逻辑运算
+![](https://s2.loli.net/2022/12/15/tS6wz3fCRYqMiK7.png)
+
+```python
+import cv2
+import numpy  as np
+a=cv2.imread("lena.bmp",0)
+b=np.zeros(a.shape, dtype=np.uint8)
+b[100:400,200:400]=255
+b[100:500,100:200]=255
+c=cv2.bitwise_and(a, b)
+cv2.imshow("a", a)
+cv2.imshow("b", b)
+cv2.imshow("c", c)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![](https://s2.loli.net/2022/12/15/ymuS2V7MxTjYaAH.png)
+
+## 掩模
+OpenCV中的很多函数都会指定一个掩模，也被称为掩码,当使用掩模参数时，操作只会在掩模值为非空的像素点上执行，并将其他像素点的值置为0。 例如保留：彩色信息
+
+在将彩色图像与掩模进行计算时，由于按位与操作要求参与运算的数据应该有相同的通道，所以无法直接将彩色图像与单通道的掩模图像进行按位与操作。我们通过将掩模图像转换为BGR模式的彩色图像，让彩色图像与（彩色）掩模图像进行按位与操作，从而实现掩模运算。
+
+> 构造一个掩模图像，将该掩模图像作为按位与函数的掩模参数，实现保留图像的指定部分
+
+```python
+import cv2
+import numpy  as np
+a=cv2.imread("lena.bmp",1)
+w, h, c=a.shape
+mask=np.zeros((w, h), dtype=np.uint8)
+mask[100:400,200:400]=255
+mask[100:500,100:200]=255
+c=cv2.bitwise_and(a, a, mask)
+print("a.shape=", a.shape)
+print("mask.shape=", mask.shape)
+cv2.imshow("a", a)
+cv2.imshow("mask", mask)
+cv2.imshow("c", c)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+## 图像与数值的运算
+
+参与运算的两个算子（参数）既可以是两幅图像，也可以是一幅图像与一个数值。
+
+## 位平面分解
+
+将灰度图像中处于同一比特位上的二进制像素值进行组合，得到一幅二进制值图像，该图像被称为灰度图像的一个位平面，这个过程被称为位平面分解。例如，将一幅灰度图像内所有像素点上处于二进制位内最低位上的值进行组合，可以构成“最低有效位”位平面。
+
+```python
+import cv2
+import numpy as np
+lena=cv2.imread("lena.bmp",0)
+cv2.imshow("lena", lena)
+r, c=lena.shape
+x=np.zeros((r, c,8), dtype=np.uint8)
+for i in range(8):
+    x[:, :, i]=2**i
+    r=np.zeros((r, c,8), dtype=np.uint8)
+for i in range(8):
+    r[:, :, i]=cv2.bitwise_and(lena, x[:, :, i])
+    mask=r[:, :, i]>0
+    r[mask]=255
+    cv2.imshow(str(i), r[:, :, i])
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![image-20221215172706577](https://s2.loli.net/2022/12/15/k8uJ6XoPYIls1wD.png)
+
++ 图(a)是原始lena图像。
++ 图(b)是第0个位平面，第0个位平面位于8位二进制值的最低位，其权重最低，对像素值的影响最小，与lena图像的相关度也最低，所以显示出来的是一幅杂乱无章的图像。
++ 图(c)是第1个位平面。
++ 图(d)是第2个位平面。
++ 图(e)是第3个位平面。
++ 图(f)是第4个位平面。
++ 图(g)是第5个位平面。
++ 图(h)是第6个位平面。
++ 图(i)是第7个位平面，第7个位平面位于8位二进制值的最高位，其对像素值的影响最大。第7位二进制值在8位二进制数中权重最高，与lena图像的相关度最高。所以，第7个位平面是与原始图像最接近的二值图像。
+
+## 图像加密和解密
+
+通过按位异或运算可以实现图像的加密和解密。通过对原始图像与密钥图像进行按位异或，可以实现加密；将加密后的图像与密钥图像再次进行按位异或，可以实现解密。
+
+```python
+import cv2
+import numpy as np
+lena=cv2.imread("lena.bmp",0)
+r, c=lena.shape
+key=np.random.randint(0,256, size=[r, c], dtype=np.uint8)
+encryption=cv2.bitwise_xor(lena, key)
+decryption=cv2.bitwise_xor(encryption, key)
+cv2.imshow("lena", lena)
+cv2.imshow("key", key)
+cv2.imshow("encryption", encryption)
+cv2.imshow("decryption", decryption)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
++ 图像lena是明文（原始）图像，是需要加密的图像，从当前目录下读入。
++ 图像key是密钥图像，是加密和解密过程中所使用的密钥，该图像是由随机数生成的。
++ 图像encryption是加密图像，是明文图像lena和密钥图像key通过按位异或运算得到的。
++ 图像decryption是解密图像，是加密图像encryption和密钥图像key通过按位异或运算得到的。
+
+![image-20221215172333157](https://s2.loli.net/2022/12/15/XLIZl5BYgd7CvyD.png)
+
++ 图(a)是原始图像lena。
++ 图(b)是密钥图像key。
++ 图(c)是原始图像lena（图(a)）借助密钥key（图(b)）加密得到的加密图像encryption。
++ 图(d)是对加密图像encryption（图(c)）使用密钥图像key（图(b)）解密得到的解密图像decryption。
+
+## 数字水印
+
+最低有效位（Least Significant Bit, LSB）指的是一个二进制数中的第0位（即最低位）。最低有效位信息隐藏指的是，将一个需要隐藏的二值图像信息嵌入载体图像的最低有效位，即将载体图像的最低有效位层替换为当前需要隐藏的二值图像，从而实现将二值图像隐藏的目的。由于二值图像处于载体图像的最低有效位上，所以对于载体图像的影响非常不明显，其具有较高的隐蔽性。
+
+在必要时直接将载体图像的最低有效位层提取出来，即可得到嵌入在该位上的二值图像，达到提取秘密信息的目的。
+
+这种信息隐藏也被称为数字水印，通过该方式可以实现信息隐藏、版权认证、身份认证等功能。例如，如果嵌入载体图像内的信息是秘密信息，就实现了信息隐藏；如果嵌入载体图像内的信息是版权信息，就能够实现版权认证；如果嵌入载体图像内的信息是身份信息，就可以实现数字签名，等等。所以，被嵌入载体图像内的信息也被称为数字水印信息。
+
+数字水印信息可以是文本、视频、音频等多种形式，这里我们仅讨论数字水印信息是二值图像的情况。
+
+### 原理
+
+● 嵌入过程：将载体图像的第0个位平面替换为数字水印信息（一幅二值图像）。
+
+● 提取过程：将载体图像的最低有效位所构成的第0个位平面提取出来，得到数字水印信息。
+
+## 脸部打码与解码
+
+```python
+import cv2
+import numpy as np
+#读取原始载体图像
+lena=cv2.imread("lena.bmp",0)
+#读取原始载体图像的shape值
+r, c=lena.shape
+mask=np.zeros((r, c), dtype=np.uint8)
+mask[220:400,250:350]=1
+#获取一个key，打码、解码所使用的密钥
+key=np.random.randint(0,256, size=[r, c], dtype=np.uint8)
+#============获取打码脸============
+#使用密钥key对原始图像lena加密
+lenaXorKey=cv2.bitwise_xor(lena, key)
+#获取加密图像的脸部信息encryptFace
+encryptFace=cv2.bitwise_and(lenaXorKey, mask*255)
+#将图像lena内的脸部值设置为0，得到noFace1
+noFace1=cv2.bitwise_and(lena, (1-mask)*255)
+#得到打码的lena图像
+maskFace=encryptFace+noFace1
+#============将打码脸解码============
+#将脸部打码的lena与密钥key进行异或运算，得到脸部的原始信息
+extractOriginal=cv2.bitwise_xor(maskFace, key)
+#将解码的脸部信息extractOriginal提取出来，得到extractFace
+extractFace=cv2.bitwise_and(extractOriginal, mask*255)
+#从脸部打码的lena内提取没有脸部信息的lena图像，得到noFace2
+noFace2=cv2.bitwise_and(maskFace, (1-mask)*255)
+#得到解码的lena图像
+extractLena=noFace2+extractFace
+#============显示图像============
+cv2.imshow("lena", lena)
+cv2.imshow("mask", mask*255)
+cv2.imshow("1-mask", (1-mask)*255)
+cv2.imshow("key", key)
+cv2.imshow("lenaXorKey", lenaXorKey)
+cv2.imshow("encryptFace", encryptFace)
+cv2.imshow("noFace1", noFace1)
+cv2.imshow("maskFace", maskFace)
+cv2.imshow("extractOriginal", extractOriginal)
+cv2.imshow("extractFace", extractFace)
+cv2.imshow("noFace2", noFace2)
+cv2.imshow("extractLena", extractLena)
+cv2.waitKey()
+cv2.destroyAllWindows()
+```
+
+![](https://s2.loli.net/2022/12/15/XgsFeZ39rwhyxSD.png)
