--- a/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像金字塔.md
+++ b/docs/Tutorial/Open/OpenCV/OpenCV轻松入门-面向Python/图像金字塔.md
@@ -2,6 +2,10 @@
 
 通常情况下，图像金字塔的底部是待处理的高分辨率图像（原始图像），而顶部则为其低分辨率的近似图像。向金字塔的顶部移动时，图像的尺寸和分辨率都不断地降低。通常情况下，每向上移动一级，图像的宽和高都降低为原来的二分之一。
 
+## 目的
+
+提取特征不仅要提取原始图像的，有可能还要提取其图像金字塔中的图像的特征。
+
 ![](https://s2.loli.net/2022/12/13/aijKbWugBh83Fs9.png)
 
 ## 理论基础
